<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JPractice</string>
    
    <string name="practiceOverviewActivity">Practice words</string>
    <string name="namedListsActivity">View word lists</string>
    <string name="findWordsActivity">Find words</string>
    
    <string name="mainButtonPractice">Practice words</string>
    <string name="mainButtonList">Word lists</string>
    <string name="mainButtonFind">Find words</string>
    
    <string name="practiceButtonMultiple">Multiple choice</string>
    <string name="practiceButtonType">Type pronunciation</string>
    <string name="practiceButtonPresets">Saved presets</string>
    <string name="practiceButtonSettings">Settings</string>

    <string name="findActionOpenWidthDialog">Adjust webview viewport width</string>
    <string name="findActionOpenCreateEntryDialog">Add database entry</string>
    <string name="findActionViewSearchHistory">View search history</string>

    <string name="listsActionCreateNewList">Create new list</string>
    <string name="listsActionExportListsAsCSV">Export all lists as CSV</string>
    <string name="listsActionAddFromCSV">Add data from CSV</string>
    
    <string name="listExportChooserTitle">Export lists to...</string>
    
    <string name="addFromCSVPasteBoxLabel">Direct CSV entry mode</string>
    <string name="addFromCSVPasteBoxHint">Type or paste CSV here</string>
    <string name="addFromCSVPathSelectionHint">Click to select a CSV file</string>
    <string name="addFromCSVChangeModeToFileSelectionButtonText">... or change to CSV file selection mode</string>
    <string name="addFromCSVChangeModeToPasteBoxButtonText">... or change to direct CSV entry mode</string>

    <string name="viewListActionFilterWords">Filter words</string>
    <string name="viewListActionDeleteList">Delete list</string>
    <string name="viewListActionExportListAsCSV">Export list as CSV</string>
    
    <string name="viewEntryActionEditEntry">Edit entry</string>

    <string name="viewItemButtonDeleteText">Delete</string>

    <string name="viewportWidthDialogTitle">Select viewport width</string>
    <string name="viewportWidthDialogOK">OK</string>

    <string name="preferencesFile">preferencesFile</string>
    <string name="preferencesViewportWidth">preferencesViewportWidth</string>
    <string name="preferencesLastUsedList">preferencesLastUsedList</string>

    <string name="createListListNameHint">List name</string>
    <string name="createListMessage">Create new list</string>
    <string name="createListOK">OK</string>
    <string name="createListCancel">Cancel</string>

    <string name="createEntryTitle">Add word to list</string>
    <string name="createEntryMessage">There shouldn\'t be a message for this dialog</string>
    <string name="createEntryOK">Add entry</string>
    <string name="createEntryCancel">Cancel</string>
    <string name="createEntryKanjiNameHint">Word (containing kanji)</string>
    <string name="createEntryReadingNameHint">Word reading (hiragana)</string>
    <string name="createEntrySpinnerLabel">Select list:</string>
    <string name="createEntryOnOKEmptyKanjiMessage">Word (kanji) field cannot be empty</string>
    <string name="createEntryOnOKEmptyReadingMessage">Word (reading) field cannot be empty</string>
    <string name="createEntryOnOKNotValidKanjiMessage">Word (kanji) must contain only japanese characters, and at least one kanji</string>
    <string name="createEntryOnOKNotValidReadingMessage">Word (reading) must contain only kana characters</string>

    <string name="intentJishoSearchWord">INTENT_JISHO_SEARCH_WORD</string>
    <string name="intentViewListListName">INTENT_VIEW_LIST_LIST_NAME</string>
    <string name="intentViewEntryList">INTENT_VIEW_ENTRY_LIST</string>
    <string name="intentViewEntryKanji">INTENT_VIEW_ENTRY_KANJI</string>

    <string name="viewEntryPageTabOverview">Overview</string>
    <string name="viewEntryPageTabJisho">Jisho</string>
    <string name="viewEntryOverviewPrevButtonText">Prev</string>
    <string name="viewEntryOverviewNextButtonText">Next</string>
    <string name="viewEntryOverviewKanjiLabel">Word:</string>
    <string name="viewEntryOverviewReadingLabel">Reading:</string>
    <string name="viewEntryOverviewListLabel">List:</string>
    <string name="viewEntryOverviewMeaningsLabel">Meanings:</string>
    <string name="viewEntryOverviewTagsLabel">Tags:</string>
    <string name="viewEntryOverviewSharedLabel">Shared kanji:</string>

    <string name="webviewActionModeAddToLast">Add to list</string>
</resources>
