<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <include layout="@layout/generic_toolbar"/>

    <Button
        android:id="@+id/practiceButtonMultiple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/practiceButtonMultiple" />
    <Button
        android:id="@+id/practiceButtonType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/practiceButtonType" />
    <Button
        android:id="@+id/practiceButtonPresets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/practiceButtonPresets" />
    <Button
        android:id="@+id/practiceButtonSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/practiceButtonSettings" />
</LinearLayout>
